# type_checker

./: .gitignore  README.md  autograder.rkt  dune-project
lib/: ast.ml  checker.ml  dune  env.ml  env.mli  parser.ml  printer.ml  type.ml
test/: dune  test_type_checker.expected  test_type_checker.ml
